--- a/package.json
+++ b/package.json
@@ -3,12 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-spring/three": "^9.4.4",
+    "@react-three/drei": "^9.5.3",
+    "@react-three/fiber": "^8.0.12",
+    "@react-three/postprocessing": "^2.3.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "drei": "^2.2.21",
+    "nodemon": "^2.0.15",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.4.4",
+    "react-three-fiber": "^6.0.13",
+    "sass": "^1.51.0",
+    "three": "^0.139.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
